scenarios/argo/fakenodes/eks/istio/istio-vs-vcluster-eks-122-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-eks-122
  namespace: eks
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-eks-122"
    route:
    - destination:
        host: vcluster-eks-122
        port:
          number: 443
